--- a/Titanic_Survival_Prediction/Titanic_Survival.ipynb
+++ b/Titanic_Survival_Prediction/Titanic_Survival.ipynb
@@ -2,6 +2,67 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ecb78106",
+   "metadata": {},
+   "source": [
+    "# Titanic Survival ML Prediction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05011828",
+   "metadata": {},
+   "source": [
+    "In this project, we will try to predict from the test data who survived on the RMS Titanic after colliding with an iceberg on April15, 1912 using some machine learning on the training data availble with us from Kaggle: https://www.kaggle.com/competitions/titanic/overview"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "244348e5",
+   "metadata": {},
+   "source": [
+    "We are given two datasets: train.csv and test.csv to train and make predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c1daaf",
+   "metadata": {},
+   "source": [
+    "Below are the columns we have in our datasets:\n",
+    "\n",
+    "- **PassengerId:**  Unique ID of passenger aboard the ship\n",
+    "- **Survived:**  0 = No, 1 = Yes (Only in the training data)\n",
+    "- **Pclass:**  Ticket class (1,2,3)\n",
+    "- **Name:**  Name of the passenger\n",
+    "- **Sex:**  male, female\n",
+    "- **Age (in years)**\n",
+    "- **SibSp:**  # of siblings / spouses aboard the Titanic\t\n",
+    "- **Parch:**  # of parents / children aboard the Titanic\t\n",
+    "- **Ticket:**  Ticket number\t\n",
+    "- **Fare:**  Passenger fare\t\n",
+    "- **Cabin:**  Cabin number\t\n",
+    "- **Embarked:**  Port of Embarkation (C = Cherbourg, Q = Queenstown, S = Southampton)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7edf48e5",
+   "metadata": {},
+   "source": [
+    "We will start with our project by importing all the required libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f47c7a",
+   "metadata": {},
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1aad4e99",
    "metadata": {},
    "source": [
